# python-outlook-cli

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
outlook/: __main__.py  groups.py  purge.py  utils.py
outlook/actions/: __init__.py  clients.py
outlook/clients/: __init__.py  auth.py  folders.py  settings.py  users.py
src/: __main__.py  graph.py
